--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,6 +1,58 @@
 <div>
-    Todo listo para trabajar con sockets
+    <h1>Registro de productos</h1>
+    <form id="registerProducts">
+        <label for="title">Nombre</label>
+        <input type="text" name="title" required>
+        <br><br>
+
+        <label for="description">Descripción</label>
+        <input type="text" name="description" required>
+        <br><br>
+
+        <label for="code">Código</label>
+        <input type="text" name="code" required>
+        <br><br>
+
+        <label for="price">Precio</label>
+        <input type="number" name="price" required>
+        <br><br>
+
+        <label for="stock">Stock</label>
+        <input type="number" name="stock" required>
+        <br><br>
+
+        <label for="category">Categoría</label>
+        <input type="text" name="category"required>
+        <br><br>
+
+        <label for="thumbnail">Imagen</label>
+        <input type="text" name="thumbnail">       
+        <br><br>
+        
+        <input type="submit"> 
+        <br><br>
+    </form>
 </div>
+
+<hr>
+
+<div>
+    {{#if products}}
+      {{#each products}}
+      <div>
+        <p>Categoría: <b>{{this.category}}</b>  - Cód: <b>{{this.code}}</b></p>
+        <h3>Id: {{this.id}} - {{this.title}}</h3>
+        <p>{{this.description}}</p>
+        <p>Stock: <b>{{this.stock}}</b> </p>
+        <p>Precio:<b> $ {{this.price}}</b></p>
+        <hr />
+      </div>
+      {{/each}}
+    {{else}}
+      <p>No hay productos para mostrar</p>
+    {{/if}}
+  </div>
+
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/realTimeProducts.js"></script>
