--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/{{style}}">
-    <title>70290 ProyFinal</title>
+    <title>70290 ProyFinal - {{title}} </title>
 </head>
 <body>
     {{{body}}}
