--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -5,7 +5,7 @@
 <main>
     <section>
         <h2>Productos</h2>
-        <div style="display: flex; flex-direction: column; gap: 0.5rem; width: 60%">
+        <div style="display: flex; flex-direction: column; gap: 0.5rem; width: auto>
             <div style="height: auto; border: solid 1px black;">
                 <ul id="products-list" style="list-style-position: inside; padding: 0; margin: 0.25rem;"></ul>
 
@@ -35,43 +35,6 @@
         </form>
     </section>
 </main>
-{{!-- <div>
-    <h1>Registro de productos</h1>
-    <form id="addProducts">
-        <label for="title">Nombre</label>
-        <input type="text" name="title" required>
-        <br><br>
-
-        <label for="description">Descripción</label>
-        <input type="text" name="description" required>
-        <br><br>
-
-        <label for="code">Código</label>
-        <input type="text" name="code" required>
-        <br><br>
-
-        <label for="price">Precio</label>
-        <input type="number" name="price" required>
-        <br><br>
-
-        <label for="stock">Stock</label>
-        <input type="number" name="stock" required>
-        <br><br>
-
-        <label for="category">Categoría</label>
-        <input type="text" name="category"required>
-        <br><br>
-
-        <label for="thumbnail">Imagen</label>
-        <input type="text" name="thumbnail">       
-        <br><br>
-        
-        <input type="submit"> 
-        <br><br>
-    </form>
-</div>
-
-<hr> --}}
 
 
 
