corrección de style en realTimeProducts.hbs

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -5,8 +5,8 @@
 <main>
     <section>
         <h2>Productos</h2>
-        <div style="display: flex; flex-direction: column; gap: 0.5rem; width: auto>
-            <div style="height: auto; border: solid 1px black;">
+        <div style="display: flex; flex-direction: column; gap: 0.5rem; width:auto">
+            <div style="height: auto; border: solid 1px black">
                 <ul id="products-list" style="list-style-position: inside; padding: 0; margin: 0.25rem;"></ul>
 
             </div>
